# VoxFormer

./: LICENSE  README.md  deform_attn_3d
deform_attn_3d/: setup.py
deform_attn_3d/csrc/: ms_deform_attn_cuda.cu  ms_deform_attn_cuda_kernel.cuh
docs/: getting_started.md  install.md  prepare_dataset.md
preprocess/: README.md  depth2lidar.sh  image2depth.sh  lidar2voxel.sh
preprocess/data_odometry_calib/sequences/00/: poses.txt
preprocess/data_odometry_calib/sequences/01/: poses.txt  times.txt
preprocess/label/: label_preprocess.py
preprocess/mapping/: CMakeLists.txt  mapping.cpp
preprocess/mobilestereonet/: LICENSE  mobilestereonet.yml  prediction.py
preprocess/mobilestereonet/datasets/: __init__.py  data_io.py  dataset.py
preprocess/mobilestereonet/filenames/: 00.txt  02.txt  03.txt  04.txt  05.txt  06.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt
preprocess/mobilestereonet/models/: MSNet2D.py  MSNet3D.py  __init__.py  submodule.py
preprocess/mobilestereonet/utils/: KittiColormap.py  __init__.py  experiment.py  metrics.py  visualization.py
preprocess/utils/: depth2lidar.py  kitti_util.py  lidar2voxel.py
projects/configs/voxformer/: qpn.py  voxformer-S.py  voxformer-S_deform3D.py  voxformer-T.py  voxformer-T_deform3D.py
projects/mmdet3d_plugin/: __init__.py
projects/mmdet3d_plugin/datasets/: __init__.py  semantic_kitti_dataset_stage1.py  semantic_kitti_dataset_stage2.py
projects/mmdet3d_plugin/voxformer/: __init__.py
tools/: test.py  train.py
(+65 files in other folders)
